Carousel overflow right issue

--- a/svg-design-demo/src/app/components/carousel/carousel.component.css
+++ b/svg-design-demo/src/app/components/carousel/carousel.component.css
@@ -3,6 +3,8 @@
     padding-left: 1vw;
     max-height: 80vh;
     display:flex;
+    width: 100vw;
+    overflow: hidden;
     /* border: thick double black; */
 }
 
